Fix layout of Attributes and Custom Zoom windows in Modern themes
and unreleased Bubblegum theme, mostly; the Custom Zoom window's numeric
input is too big in the Bubblegum theme, so it's not aligned nicely with
the other radio buttons.

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -779,6 +779,12 @@ html, body, .jspaint {
 	width: 50px;
 }
 
+.radio-field {
+	display: flex;
+	flex-flow: row;
+	align-items: center;
+}
+
 /* @TODO: part of os-gui */
 .os-window {
 	display: flex;
